feat: add patch method to yaml and correct controller methods
