# src/main/java/com/lbd/projectlbd/controller/CommentController.java
@@ -1,10 +1,9 @@
 package com.lbd.projectlbd.controller;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.github.fge.jsonpatch.JsonPatch;
 import com.lbd.projectlbd.api.CommentsApi;
-import com.lbd.projectlbd.apiresponse.StandardResponse;
 import com.lbd.projectlbd.dto.CommentDto;
-import com.lbd.projectlbd.entity.Comment;
 import com.lbd.projectlbd.mapper.CommentMapper;
 import com.lbd.projectlbd.service.comment.CommentServiceImpl;
 import lombok.RequiredArgsConstructor;
@@ -12,7 +11,9 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.ArrayList;
+import java.io.ByteArrayInputStream;
+import java.io.IOException;
+import java.io.InputStream;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -42,19 +43,19 @@ public class CommentController implements CommentsApi {
     }
 
     @Override
-    public ResponseEntity<Void> deleteComment(@PathVariable Long id) {
+    public ResponseEntity<Void> deleteComment(Long id) {
         commentService.delete(id);
         return new ResponseEntity<>(HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<Void> deleteCommentV2(@PathVariable Long id) {
+    public ResponseEntity<Void> deleteCommentV2(Long id) {
         commentService.delete(id);
         return new ResponseEntity<>(HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<List<CommentModelApi>> getCommentByDelegationId(@PathVariable Long delegationId) {
+    public ResponseEntity<List<CommentModelApi>> getCommentByDelegationId(Long delegationId) {
         return new ResponseEntity<>(commentService.getAllByDelegationId(delegationId)
                 .stream()
                 .map(commentMapper::convertDtoToModelApi)
@@ -62,7 +63,7 @@ public class CommentController implements CommentsApi {
     }
 
     @Override
-    public ResponseEntity<List<CommentV2ModelApi>> getCommentByDelegationIdV2(@PathVariable Long delegationId) {
+    public ResponseEntity<List<CommentV2ModelApi>> getCommentByDelegationIdV2(Long delegationId) {
         return new ResponseEntity<>(commentService.getAllByDelegationId(delegationId)
                 .stream()
                 .map(commentMapper::convertDtoToApiV2)
@@ -70,17 +71,17 @@ public class CommentController implements CommentsApi {
     }
 
     @Override
-    public ResponseEntity<CommentModelApi> getCommentById(@PathVariable Long id) {
+    public ResponseEntity<CommentModelApi> getCommentById(Long id) {
         return new ResponseEntity<>(commentMapper.convertDtoToModelApi(commentService.findById(id)), HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<CommentV2ModelApi> getCommentByIdV2(@PathVariable Long id) {
+    public ResponseEntity<CommentV2ModelApi> getCommentByIdV2(Long id) {
         return new ResponseEntity<>(commentMapper.convertDtoToApiV2(commentService.findById(id)), HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<List<CommentModelApi>> getCommentByParentId(@PathVariable Long parentId) {
+    public ResponseEntity<List<CommentModelApi>> getCommentByParentId(Long parentId) {
         return new ResponseEntity<>(commentService.getAllByUpComment(parentId)
                 .stream().map(commentMapper::convertDtoToModelApi)
                 .collect(Collectors.toList()),
@@ -88,7 +89,7 @@ public class CommentController implements CommentsApi {
     }
 
     @Override
-    public ResponseEntity<List<CommentV2ModelApi>> getCommentByParentIdV2(@PathVariable Long parentId) {
+    public ResponseEntity<List<CommentV2ModelApi>> getCommentByParentIdV2(Long parentId) {
         return new ResponseEntity<>(commentService.getAllByUpComment(parentId)
                 .stream().map(commentMapper::convertDtoToApiV2)
                 .collect(Collectors.toList()),
@@ -112,23 +113,43 @@ public class CommentController implements CommentsApi {
     }
 
     @Override
-    public ResponseEntity<Void> updateComment(@PathVariable Long id, @RequestBody CommentModelApi commentModelApi) {
+    public ResponseEntity<Void> updateComment(Long id, CommentModelApi commentModelApi) {
         CommentDto commentDto = commentMapper.convertApiToDto(commentModelApi);
         commentService.update(id, commentDto);
         return new ResponseEntity<>(HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<Void> updateCommentV2(@PathVariable Long id, @RequestBody CommentV2ModelApi commentModelApi) {
+    public ResponseEntity<Void> updateCommentV2(Long id, CommentV2ModelApi commentModelApi) {
         CommentDto commentDto = commentMapper.convertApiV2ToDto(commentModelApi);
         commentService.update(id, commentDto);
         return new ResponseEntity<>(HttpStatus.OK);
     }
 
-//    @PatchMapping(path = "/{id}", consumes = "application/json-patch+json")
-//    public ResponseEntity<StandardResponse> patchComment(@PathVariable Long id, @RequestBody JsonPatch patch) {
-//        commentService.patch(id, patch);
-//        return new StandardResponse(HttpStatus.OK, "Comment patched").buildResponseEntity();
-//    }
+    //TODO: correct this one: change the name of request body and take JsonPatch as type, not String
+    @Override
+    public ResponseEntity<Void> patchComment(Long id, String body)  {
+        final ObjectMapper mapper = new ObjectMapper();
+        final InputStream in = new ByteArrayInputStream(body.getBytes());
+        try {
+            final JsonPatch patch = mapper.readValue(in, JsonPatch.class);
+            commentService.patch(id, patch);
+            return new ResponseEntity<>(HttpStatus.OK);
+        } catch(IOException exception) {
+            throw new RuntimeException(exception);
+        }
+    }
 
+    @Override
+    public ResponseEntity<Void> patchCommentV2(Long id, String body) {
+        final ObjectMapper mapper = new ObjectMapper();
+        final InputStream in = new ByteArrayInputStream(body.getBytes());
+        try {
+            final JsonPatch patch = mapper.readValue(in, JsonPatch.class);
+            commentService.patch(id, patch);
+            return new ResponseEntity<>(HttpStatus.OK);
+        } catch(IOException exception) {
+            throw new RuntimeException(exception);
+        }
+    }
 }
